--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mindef/demo",
+    "name": "racchamale/base",
     "description": "Proyecto MVC demo",
     "type": "project",
     "config": {
