--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-app",
+  "name": "base-mvc",
   "version": "1.0.0",
   "description": "Aplicacion MVC demo",
   "main": "index.js",
@@ -28,6 +28,7 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^4.4.0",
     "datatables.net-bs5": "^1.12.1",
     "fullcalendar": "^5.11.3",
     "jquery": "^3.6.1",
